Made various things

--- a/chat.html
+++ b/chat.html
@@ -8,7 +8,8 @@
       src="https://kit.fontawesome.com/54015cce3a.js"
       crossorigin="anonymous"
     ></script>
-    <title>Chat | Kakao Clone</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Chats | Kakao Clone</title>
   </head>
 
   <body>
@@ -27,10 +28,9 @@
     <header class="header">
       <div class="header__header-column">
         <a href="index.html" class="header__back-btn">
-          <i class="fas fa-arrow-left fa-2x"></i>
+          <i class="fas fa-arrow-left"></i>
         </a>
         <h1 class="header__title">Best Friend</h1>
-        <h1 class="header__title">Chat</h1>
       </div>
       <div class="header__header-column">
         <span class="header__icon">
