--- a/more.html
+++ b/more.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/54015cce3a.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>More | Kakao Clone</title>
   </head>
 
