--- a/settings.html
+++ b/settings.html
@@ -8,15 +8,16 @@
       src="https://kit.fontawesome.com/54015cce3a.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Settings | Kakao Clone</title>
   </head>
 
   <body>
     <div class="status-bar">
-      <div class="status-bar__conlumn">
+      <div class="status-bar__column">
         <span class="status-bar__clock">13:54</span>
       </div>
-      <div class="status-bar__conlumn">
+      <div class="status-bar__column">
         <i class="fas fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
         <i class="fas fa-wifi"></i>
@@ -41,8 +42,9 @@
       <section class="settings__sections">
         <ul class="settings__list">
           <li class="settings__setting">
-            <span class="settings__icon"></span>
-            <i class="fas fa-lock"></i>
+            <span class="settings__icon">
+              <i class="fas fa-lock"></i>
+            </span>
             <span class="settings__title">Privacy</span>
           </li>
           <li class="settings__setting">
