--- a/find.html
+++ b/find.html
@@ -14,10 +14,10 @@
 
   <body>
     <div class="status-bar">
-      <div class="status-bar__conlumn">
+      <div class="status-bar__column">
         <span class="status-bar__clock">13:54</span>
       </div>
-      <div class="status-bar__conlumn">
+      <div class="status-bar__column">
         <i class="fas fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
         <i class="fas fa-wifi"></i>
@@ -81,11 +81,7 @@
         </h5>
         <li class="find__friend friend">
           <div class="friend__column">
-            <img
-              src="pictures/avatar.jpg"
-              alt=""
-              class="g-avatar friend__avatar"
-            />
+            <img src="pictures/avatar.jpg" alt="" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Wooyeong Kim
