--- a/friends.html
+++ b/friends.html
@@ -14,10 +14,10 @@
 
   <body>
     <div class="status-bar">
-      <div class="status-bar__conlumn">
+      <div class="status-bar__column">
         <span class="status-bar__clock">13:54</span>
       </div>
-      <div class="status-bar__conlumn">
+      <div class="status-bar__column">
         <i class="fas fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
         <i class="fas fa-wifi"></i>
@@ -40,7 +40,7 @@
     </header>
     <main class="friends">
       <header class="friends__header">
-        <div class="friends__friend friend friend--lg">
+        <div class="friends__friend friend">
           <div class="friend__column">
             <img
               src="pictures/avatar.jpg"
@@ -62,11 +62,7 @@
         <h5 class="friends__title">Plus Friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img
-              src="pictures/avatar.jpg"
-              alt=""
-              class="g-avatar friend__avatar"
-            />
+            <img src="pictures/avatar.jpg" alt="" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Plus Friend
@@ -77,13 +73,9 @@
       </div>
       <ul class="friends__list">
         <h5 class="friends__title">Friends 14</h5>
-        <li class="friends__friend friend">
+        <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img
-              src="pictures/avatar.jpg"
-              alt=""
-              class="g-avatar friend__avatar"
-            />
+            <img src="pictures/avatar.jpg" alt="" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Wooyeong Kim
@@ -95,8 +87,10 @@
           </div>
           <div class="friend__column">
             <div class="friend__now-listening">
-              <span>FTISLAND (FT NomadCoders) </span>
-              <i class="fas fa-play"></i>
+              <span
+                >FTISLAND (FT NomadCoders)
+                <i class="fas fa-play"></i>
+              </span>
             </div>
           </div>
         </li>
