--- a/more.html
+++ b/more.html
@@ -14,10 +14,10 @@
 
   <body>
     <div class="status-bar">
-      <div class="status-bar__conlumn">
+      <div class="status-bar__column">
         <span class="status-bar__clock">13:54</span>
       </div>
-      <div class="status-bar__conlumn">
+      <div class="status-bar__column">
         <i class="fas fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
         <i class="fas fa-wifi"></i>
@@ -97,19 +97,19 @@
         <ul class="more__suggestions-list">
           <li class="more__suggestion suggestion">
             <span class="suggestion__icon">
-              <i class="fas fa-quote-right fa-2x"></i>
+              <i class="fas fa-quote-right"></i>
             </span>
             <span class="suggestion__title">Kakao Story</span>
           </li>
           <li class="more__suggestion suggestion">
             <span class="suggestion__icon">
-              <i class="fas fa-beer fa-2x"></i>
+              <i class="fas fa-beer"></i>
             </span>
             <span class="suggestion__title">Kakao Friends</span>
           </li>
           <li class="more__suggestion suggestion">
             <span class="suggestion__icon">
-              <i class="fas fa-gamepad fa-2x"></i>
+              <i class="fas fa-gamepad"></i>
             </span>
             <span class="suggestion__title">Friends Gem</span>
           </li>
