--- a/index.html
+++ b/index.html
@@ -64,11 +64,10 @@
                 </div>
               </div>
               <div class="friend__column">
-                <div class="friend__now-listening">
-                  <span class="chat__timestamp">
+                <span class="chat__timestamp">
                     March 8
-                  </span>
-                </div>
+                </span>
+              </div>
               </div>
             </div>
           </a>
@@ -100,5 +99,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small</span>
+    </div>
   </body>
 </html>
