--- a/chat.html
+++ b/chat.html
@@ -49,7 +49,7 @@
           <img src="pictures/avatar.jpg" class="g-avatar message__avatar" />
           <div class="message__content">
             <span class="message__bubble">
-              Congrats I love you!
+              Hi there
             </span>
             <span class="message__author">Best Friend</span>
           </div>
@@ -57,14 +57,14 @@
         <li class="sent-message message">
           <span class="message__timestamp"></span>
           <div class="message__content">
-            <span class="message__bubble">Thank you see you soon!</span>
+            <span class="message__bubble">Hello what's up</span>
           </div>
         </li>
         <li class="incoming-message message">
           <img src="pictures/avatar.jpg" class="g-avatar message__avatar" />
           <div class="message__content">
             <span class="message__bubble">
-              Congrats I love you!
+              Nice to meet you!
             </span>
             <span class="message__author">Best Friend</span>
           </div>
@@ -72,7 +72,7 @@
         <li class="sent-message message">
           <span class="message__timestamp"></span>
           <div class="message__content">
-            <span class="message__bubble">Thank you see you soon!</span>
+            <span class="message__bubble">Nice to meet you too :)</span>
           </div>
         </li>
       </ul>
