--- a/chat.html
+++ b/chat.html
@@ -46,31 +46,35 @@
       <ul class="chat__messages">
         <span class="chat__timestamp">Friday, January 11, 2019</span>
         <li class="incoming-message message">
-          <img src="pictures/avatar.jpg" class="g-avatar message__avatar" />
+          <img src="pictures/pig.jpg" class="g-avatar message__avatar" />
           <div class="message__content">
+            <span class="message__author">Best Friend</span>
             <span class="message__bubble">
               Hi there
             </span>
-            <span class="message__author">Best Friend</span>
           </div>
+          <span class="message__timestamp">10:24</span>
+
         </li>
         <li class="sent-message message">
-          <span class="message__timestamp"></span>
+          <span class="message__timestamp">10:30</span>
           <div class="message__content">
             <span class="message__bubble">Hello what's up</span>
           </div>
         </li>
         <li class="incoming-message message">
-          <img src="pictures/avatar.jpg" class="g-avatar message__avatar" />
+          <img src="pictures/pig.jpg" class="g-avatar message__avatar" />
           <div class="message__content">
+            <span class="message__author">Best Friend</span>
             <span class="message__bubble">
               Nice to meet you!
             </span>
-            <span class="message__author">Best Friend</span>
           </div>
+          <span class="message__timestamp">10:32</span>
+
         </li>
         <li class="sent-message message">
-          <span class="message__timestamp"></span>
+          <span class="message__timestamp">10:37</span>
           <div class="message__content">
             <span class="message__bubble">Nice to meet you too :)</span>
           </div>
