--- a/friends.html
+++ b/friends.html
@@ -34,7 +34,9 @@
           <i class="fas fa-search"></i>
         </span>
         <span class="header__icon">
-          <i class="fas fa-cog"></i>
+          <a href="settings.html" class="">
+            <i class="fas fa-cog"></i>
+          </a>
         </span>
       </div>
     </header>
@@ -52,7 +54,7 @@
                 Wooyeong Kim
               </span>
               <span class="friend__status">
-                nomadcoders.co
+                mondaoporosis.github.io
               </span>
             </div>
           </div>
@@ -62,7 +64,7 @@
         <h5 class="friends__title">Plus Friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img src="pictures/avatar.jpg" alt="" class="friend__avatar" />
+            <img src="pictures/monkey.jpg" alt="" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Plus Friend
@@ -75,20 +77,20 @@
         <h5 class="friends__title">Friends 14</h5>
         <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img src="pictures/avatar.jpg" alt="" class="friend__avatar" />
+            <img src="pictures/pig.jpg" alt="" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Wooyeong Kim
+                Best Friend
               </span>
               <span class="friend__status">
-                nomadcoders.co
+                love you
               </span>
             </div>
           </div>
           <div class="friend__column">
             <div class="friend__now-listening">
-              <span
-                >FTISLAND (FT NomadCoders)
+              <span>
+                Lullaby (IU)
                 <i class="fas fa-play"></i>
               </span>
             </div>
@@ -105,6 +107,7 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="far fa-comment"></i>
           </a>
         </li>
