--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
             <div class="chats__chat friend friend--lg">
               <div class="friend__column">
                 <img
-                  src="pictures/avatar.jpg"
+                  src="pictures/pig.jpg"
                   alt=""
                   class="m-avatar friend__avatar"
                 />
                 <div class="friend__content">
                   <span class="friend__name">
-                    Lynn
+                    Best Friend
                   </span>
                   <span class="friend__bottom-text">
-                    Going home!
+                    Nice to meet you too :)
                   </span>
                 </div>
               </div>
               <div class="friend__column">
                 <span class="chat__timestamp">
-                  March 8
+                  January 11
                 </span>
               </div>
             </div>
