--- a/settings.html
+++ b/settings.html
@@ -62,5 +62,7 @@
         </ul>
       </section>
     </main>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small</span>
   </body>
 </html>
